Mojo EDK: Fix clean shutdown

Though not used in production in any way that's affected by this,
r477744 broke clean shutdown. The bug is ultimately caused by the fact
that we don't check the shutdown-requested state after processing
incoming control event IPC, so if such an event is responsible for
making the system enter a clean-shutdownable state, it will go
undetected and the shutdown process will hang.

BUG=735338
TBR=jcivelli@chromium.org

Change-Id: If3ca2344a70024fbf6bc028ae177f23026612011
Reviewed-on: https://chromium-review.googlesource.com/543677
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481248}
Former-commit-id: 6c58002d91c410e16c590816f0474c790effcd7b